add utility and refactor card

--- a/src/app/features/projects/components/project-card/project-card.component.html
+++ b/src/app/features/projects/components/project-card/project-card.component.html
@@ -7,11 +7,9 @@
 
     <img class="w-full" [src]="project.projectImgUrl" alt="Something" />
 
-    <div class="text-xl my-3 font-bold">
-      {{ project.title }}
-    </div>
+    <div class="text-xl my-3 font-bold">{{ title }}</div>
 
-    <div class="project-description">{{ project.description }}</div>
+    <div class="project-description">{{ description }}</div>
 
     <div class="flex justify-content-between mt-auto">
       <p-button
