--- a/src/app/features/projects/components/project-line/project-line.component.html
+++ b/src/app/features/projects/components/project-line/project-line.component.html
@@ -1,5 +1,5 @@
 <div
-  class="project-line shadow-2 surface-card border-round flex justify-content-evenly p-3"
+  class="project-line surface-card border-round flex justify-content-evenly p-3"
 >
   <img class="w-2 block" [src]="project?.projectImgUrl" alt="Project photo" />
 
