--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex";
 @import "primeicons/primeicons";
+
+:root {
+  --box-shadow-value: 0 4px 8px var(--primary-color);
+}
