--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -24,8 +24,8 @@
     </div>
   </div>
 
-  <div class="flex flex-column gap-3">
-    <p-panel header="My Projects" [toggleable]="true">
+  <div class="flex flex-column gap-3 w-full">
+    <p-panel header="My Projects" [toggleable]="true" [collapsed]="true">
       <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
         <div class="flex flex-column gap-3">
           @for (project of state.project.data(); track $index) {
@@ -38,7 +38,7 @@
       </p-scrollPanel>
     </p-panel>
 
-    <p-panel header="My Applications" [toggleable]="true">
+    <p-panel header="My Applications" [toggleable]="true" [collapsed]="true">
       @for (position of state.position.myApplications(); track $index) {
         <app-position-line [position]="position" />
       }
