--- a/src/app/features/projects/components/projects-filter/projects-filter.component.html
+++ b/src/app/features/projects/components/projects-filter/projects-filter.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 bg-primary-reverse border-round">
-  <div class="flex gap-2" [formGroup]="searchForm">
+  <div class="flex flex-wrap gap-2" [formGroup]="searchForm">
     <app-project-category-dropdown
       class="w-15rem p-fluid"
       formControlName="category"
