fix: ui issues and change categories

--- a/src/app/features/positions/components/create-position-dialog/create-position-dialog.component.html
+++ b/src/app/features/positions/components/create-position-dialog/create-position-dialog.component.html
@@ -29,6 +29,8 @@
       <p-dropdown
         formControlName="category"
         [options]="specialities"
+        scrollHeight="400px"
+        appendTo="body"
         placeholder="Speciality"
         [editable]="true"
       ></p-dropdown>
