--- a/src/app/features/positions/components/position-filter/position-filter.component.html
+++ b/src/app/features/positions/components/position-filter/position-filter.component.html
@@ -15,6 +15,7 @@
     formControlName="positionCategory"
     [options]="specialities"
     placeholder="Speciality"
+    [scrollHeight]="'600px'"
     [editable]="true"
   ></p-dropdown>
 </div>
