--- a/src/app/features/positions/components/position-line/position-line.component.html
+++ b/src/app/features/positions/components/position-line/position-line.component.html
@@ -15,6 +15,8 @@
 
     @if (position.currentUserPositionApplyStatus) {
       <div>{{ position.currentUserPositionApplyStatus }}</div>
+    } @else if (editable) {
+      <p-button (click)="removePosition()" label="Remove"></p-button>
     } @else {
       <p-button (click)="applyOnPosition()" label="Apply"></p-button>
     }
