--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -33,7 +33,11 @@
           [style]="{ width: '100%', height: '50vh' }"
         >
           @for (position of state.position.positions(); track $index) {
-            <app-position-line [position]="position" />
+            <app-position-line
+              (onRemovePosition)="removePosition($event)"
+              [editable]="true"
+              [position]="position"
+            />
           }
         </p-scrollPanel>
       </p-card>
