--- a/src/app/features/positions/pages/positions-page/positions-page.component.html
+++ b/src/app/features/positions/pages/positions-page/positions-page.component.html
@@ -5,6 +5,7 @@
     @for (position of state.position.positions(); track $index) {
       <app-position-line
         (onPositionApply)="handleOnPositionApply($event)"
+        [isEditable]="isPositionEditable(position)"
         [position]="position"
       ></app-position-line>
     }
