--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -35,7 +35,7 @@
           @for (position of state.position.positions(); track $index) {
             <app-position-line
               (onRemovePosition)="removePosition($event)"
-              [editable]="true"
+              [isEditable]="true"
               [position]="position"
             />
           }
