--- a/src/app/features/chat/chat-window/chat-window.component.scss
+++ b/src/app/features/chat/chat-window/chat-window.component.scss
@@ -3,12 +3,12 @@
     top: 50%; /* Position from the top */
     left: 50%; /* Position from the left */
     transform: translate(-50%, -50%); /* Move the element back by half of its width and height */
-    width: 1000px; /* Set the width of the chat window */
-    height: 500px; /* Set the height of the chat window */
-    background-color: #fff; /* Background color */
-    border: 1px solid #ccc; /* Border */
-    border-radius: 5px; /* Border radius */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Box shadow for a slight elevation effect */
+    width: 1000px; 
+    height: 500px; 
+    background-color: #fff; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
     z-index: 9999;
 }
     .messages-container{
