--- a/src/app/features/positions/pages/position-page/position-page.component.html
+++ b/src/app/features/positions/pages/position-page/position-page.component.html
@@ -1,14 +1,16 @@
 @if (selectedPosition()) {
   <app-position-line [position]="selectedPosition()!" />
 
-  <p-card class="col-8" header="Applicants">
-    <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
-      @for (applicant of selectedPosition()!.applicants; track $index) {
-        <app-position-applicant
-          (changeApplicantStatus)="changeApplicantStatus($event)"
-          [applicant]="applicant"
-        />
-      }
-    </p-scrollPanel>
-  </p-card>
+  @if (state.user.currentUser()?.id == selectedPosition()?.project?.ownerId) {
+    <p-card class="col-8" header="Applicants">
+      <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
+        @for (applicant of selectedPosition()!.applicants; track $index) {
+          <app-position-applicant
+            (changeApplicantStatus)="changeApplicantStatus($event)"
+            [applicant]="applicant"
+          />
+        }
+      </p-scrollPanel>
+    </p-card>
+  }
 }
