--- a/src/app/features/projects/pages/projects-page/projects-page.component.html
+++ b/src/app/features/projects/pages/projects-page/projects-page.component.html
@@ -21,17 +21,19 @@
 
 <div class="projects-container" (scroll)="onScroll($event)">
   @if (state.project.data()) {
-    <div class="flex gap-5 flex-wrap justify-content-center py-5">
-      @if (isCardView()) {
+    @if (isCardView()) {
+      <div class="flex gap-5 flex-wrap justify-content-center py-5">
         @for (project of state.project.data(); track $index) {
           <app-project-card [project]="project"></app-project-card>
         }
-      } @else {
+      </div>
+    } @else {
+      <div class="flex flex-column align-items-center row-gap-3 mt-5">
         @for (project of state.project.data(); track $index) {
           <app-project-line [project]="project"></app-project-line>
         }
-      }
-    </div>
+      </div>
+    }
   } @else {
     <app-projects-not-found />
   }
