--- a/src/app/features/projects/pages/projects-page/projects-page.component.scss
+++ b/src/app/features/projects/pages/projects-page/projects-page.component.scss
@@ -2,3 +2,15 @@
   height: 40rem;
   overflow-y: scroll;
 }
+
+@media screen and (min-width: 992px) {
+  .projects-container {
+    height: 40rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects-container {
+    height: 50rem;
+  }
+}
