--- a/src/app/features/positions/components/position-applicant/position-applicant.component.html
+++ b/src/app/features/positions/components/position-applicant/position-applicant.component.html
@@ -1,46 +1,34 @@
-<div
-  class="flex justify-content-between surface-card border-1 border-round surface-border flex p-3"
->
-  <div>
-    <p-avatar
-      [image]="applicant.imageSrc"
-      styleClass="mr-2"
-      size="xlarge"
-      shape="circle"
-    ></p-avatar>
+<div class="flex align-items-center justify-content-between">
+  <p-avatar
+    [image]="applicant.imageSrc"
+    styleClass="mr-2"
+    size="normal"
+    shape="square"
+  ></p-avatar>
 
-    <div>
-      <div class="font-semibold font-italic">
-        <span>{{ applicant.firstName }} </span>
-        <span>{{ applicant.lastName }}</span>
-      </div>
-      <div class="text-sm">
-        {{ applicant.title }}
-      </div>
+  <div>
+    <div class="font-semibold font-italic">
+      <span>{{ applicant.firstName }} </span>
+      <span>{{ applicant.lastName }}</span>
+    </div>
+    <div class="text-sm">
+      {{ applicant.title }}
     </div>
   </div>
-  <div>
-    {{ applicant.status }}
-  </div>
 
-  <div class="flex column-gap-1">
-    @if (
-      applicant.status === statuses.Sent ||
-      applicant.status === statuses.OnReview
-    ) {
-      <p-button
-        (click)="changeStatus(statuses.Rejected)"
-        severity="danger"
-        label="Reject"
-      />
-    }
+  <p-tag
+    [severity]="positionApplyStatusTags[applicant.status]"
+    [value]="applicant.status"
+  ></p-tag>
 
-    @if (applicant.status === statuses.Sent) {
-      <p-button (click)="changeStatus(statuses.OnReview)" label="Review" />
-    }
-
-    @if (applicant.status === statuses.OnReview) {
-      <p-button (click)="changeStatus(statuses.Confirmed)" label="Confirm" />
-    }
-  </div>
+  @if (items.length !== 0) {
+    <div>
+      <p-toast></p-toast>
+      <p-menu appendTo="body" #menu [model]="items" [popup]="true"></p-menu>
+      <div
+        (click)="menu.toggle($event)"
+        class="pi pi-bars cursor-pointer"
+      ></div>
+    </div>
+  }
 </div>
