--- a/src/app/features/positions/components/position-line/position-line.component.html
+++ b/src/app/features/positions/components/position-line/position-line.component.html
@@ -1,26 +1,27 @@
-<div class="mt-3 p-2 border-round-md border-1 border-primary shadow-5">
-  <div>
-    <span (click)="navigateToPositionPage()" class="underline cursor-pointer">{{
-      position.title
-    }}</span>
-    <span> at </span>
-    <span class="font-italic mr-2">{{ position.project.title }}</span>
+<div class="surface-card border-round border-1 surface-border">
+  <div class="flex p-2">
+    <div>
+      <span
+        (click)="navigateToPositionPage()"
+        class="text-xl underline cursor-pointer"
+        >{{ position.title }}</span
+      >
+      <span> at </span>
+      <span class="underline font-italic mr-2 cursor-pointer">{{
+        position.project.title
+      }}</span>
 
-    <span class="text-sm text-color-secondary">
-      <span class="pi pi-map-marker"></span>
-      <span>{{ position.project.country }}</span>
-    </span>
-  </div>
+      @if (position.project.country) {
+        <span class="text-sm text-color-secondary">
+          <span class="pi pi-map-marker"></span>
+          <span>{{ position.project.country }}</span>
+        </span>
+      }
+    </div>
 
-  <div class="flex justify-content-between mt-1">
-    <div class="text-sm">{{ position.shortDescription }}</div>
-
-    @if (position.currentUserPositionApplyStatus) {
-      <div>{{ position.currentUserPositionApplyStatus }}</div>
-    } @else if (isEditable) {
-      <p-button (click)="removePosition()" label="Remove"></p-button>
-    } @else {
-      <p-button (click)="applyOnPosition()" label="Apply"></p-button>
-    }
+    <div class="ml-auto flex column-gap-2">
+      <p-tag [value]="position.positionCategory" />
+      <p-tag severity="info" [value]="position.project.category" />
+    </div>
   </div>
 </div>
