--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -1,8 +1,13 @@
 @if (state.project.selected() && !this.state.isLoading()) {
-  <div class="flex column-gap-1 align-items-center">
-    <img class="block" [src]="state.project.selected()?.projectImgUrl" />
-    <div class="text-base">{{ state.project.selected()?.description }}</div>
-  </div>
+  <p-card>
+    <div class="flex column-gap-1 align-items-center">
+      <img
+        class="block border-round"
+        [src]="state.project.selected()?.projectImgUrl"
+      />
+      <div class="text-base">{{ state.project.selected()?.description }}</div>
+    </div>
+  </p-card>
   <div class="flex flex-column gap-3">
     <div class="flex justify-content-between">
       <app-create-position-dialog
@@ -48,11 +53,7 @@
           [style]="{ width: '100%', height: '50vh' }"
         >
           @for (position of state.position.positions(); track $index) {
-            <app-position-line
-              (onRemovePosition)="removePosition($event)"
-              [isEditable]="true"
-              [position]="position"
-            />
+            <app-position-line [position]="position" />
           }
         </p-scrollPanel>
       </p-card>
