refactor: migrate project state as project store

--- a/src/app/features/projects/pages/projects-page/projects-page.component.html
+++ b/src/app/features/projects/pages/projects-page/projects-page.component.html
@@ -20,16 +20,16 @@
 </div>
 
 <div class="projects-container" (scroll)="onScroll($event)">
-  @if (state.project.data()) {
+  @if (projects()) {
     @if (isCardView()) {
       <div class="flex gap-5 flex-wrap justify-content-center py-5">
-        @for (project of state.project.data(); track $index) {
+        @for (project of projects(); track $index) {
           <app-project-card [project]="project"></app-project-card>
         }
       </div>
     } @else {
       <div class="flex flex-column align-items-center row-gap-3 mt-5">
-        @for (project of state.project.data(); track $index) {
+        @for (project of projects(); track $index) {
           <app-project-line [project]="project"></app-project-line>
         }
       </div>
