--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -1,11 +1,11 @@
-@if (state.project.selected() && !this.state.isLoading()) {
+@if (selectedProject() && !this.state.isLoading()) {
   <p-card>
     <div class="flex column-gap-1 align-items-center">
       <img
         class="block border-round"
-        [src]="state.project.selected()?.projectImgUrl"
+        [src]="selectedProject()?.projectImgUrl"
       />
-      <div class="text-base">{{ state.project.selected()?.description }}</div>
+      <div class="text-base">{{ selectedProject()?.description }}</div>
     </div>
   </p-card>
   <div class="flex flex-column gap-3">
@@ -27,7 +27,7 @@
           <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
             <div class="flex flex-column gap-2">
               @for (
-                participant of state.project.selected()?.participants;
+                participant of selectedProject()?.participants;
                 track $index
               ) {
                 <app-project-participant [participant]="participant" />
