fix: small lint issues

--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -3,6 +3,7 @@
     <div class="flex column-gap-1 align-items-center">
       <img
         class="block border-round"
+        alt="Project"
         [src]="selectedProject()?.projectImgUrl"
       />
       <div class="text-base">{{ selectedProject()?.description }}</div>
