--- a/src/app/features/user/pages/user/user.component.html
+++ b/src/app/features/user/pages/user/user.component.html
@@ -24,7 +24,7 @@
     <p-panel header="My Projects" [toggleable]="true" [collapsed]="true">
       <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
         <div class="flex flex-column gap-3">
-          @for (project of state.project.projects(); track $index) {
+          @for (project of projects(); track $index) {
             <app-project-line
               [project]="project"
               [isRemovable]="true"
