--- a/src/app/features/positions/pages/positions-page/positions-page.component.html
+++ b/src/app/features/positions/pages/positions-page/positions-page.component.html
@@ -2,7 +2,7 @@
   <app-position-filter />
 
   <div>
-    @for (position of state.position.positions(); track $index) {
+    @for (position of positions(); track $index) {
       <app-position-line [position]="position"></app-position-line>
     }
   </div>
