refactor: user store

--- a/src/app/features/user/pages/login/login.component.html
+++ b/src/app/features/user/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="grid pt-3">
   <div class="col">
-    <img class="block w-full" src="../assets/auth.png" alt="Auth picture" />
+    <img class="block w-full" src="../assets/auth.png" alt="Auth" />
   </div>
 
   <div class="col">
