--- a/src/app/features/positions/pages/position-page/position-page.component.html
+++ b/src/app/features/positions/pages/position-page/position-page.component.html
@@ -46,13 +46,13 @@
 
     <div class="col-4 flex flex-column gap-1">
       <p-card header="Check similar offers">
-        @for (position of state.position.positions(); track $index) {
+        @for (position of positionStore.positions(); track $index) {
           <app-position-line [position]="position"></app-position-line>
         }
       </p-card>
 
       @if (
-        state.user.currentUser()?.id == selectedPosition()?.project?.ownerId
+        userStore.currentUser()?.id == selectedPosition()?.project?.ownerId
       ) {
         <p-card header="Applicants">
           <p-scrollPanel [style]="{ width: '100%', height: '50vh' }">
