--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -1,4 +1,4 @@
-@if (selectedProject() && !this.state.isLoading()) {
+@if (selectedProject() && !isLoading()) {
   <p-card>
     <div class="flex column-gap-1 align-items-center">
       <img
@@ -53,13 +53,13 @@
           class="h-28rem"
           [style]="{ width: '100%', height: '50vh' }"
         >
-          @for (position of state.position.positions(); track $index) {
+          @for (position of positionStore.positions(); track $index) {
             <app-position-line [position]="position" />
           }
         </p-scrollPanel>
       </p-card>
     </div>
   </div>
-} @else if (!state.isLoading()) {
+} @else if (!isLoading()) {
   <div>Current project not found!</div>
 }
