--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -53,7 +53,7 @@
           class="h-28rem"
           [style]="{ width: '100%', height: '50vh' }"
         >
-          @for (position of positionStore.positions(); track $index) {
+          @for (position of store.positions(); track $index) {
             <app-position-line [position]="position" />
           }
         </p-scrollPanel>
