refactor: more refactoring

--- a/src/app/features/projects/components/project-line/project-line.component.html
+++ b/src/app/features/projects/components/project-line/project-line.component.html
@@ -1,7 +1,7 @@
 <div
   class="project-line surface-card border-round border-1 surface-border flex justify-content-evenly p-3"
 >
-  <img class="w-2 block" [src]="project?.projectImgUrl" alt="Project photo" />
+  <img class="w-2 block" [src]="project?.projectImgUrl" alt="Project" />
 
   <div class="w-2 flex flex-column justify-content-between">
     <div
