fix: auth state

--- a/src/app/features/positions/components/position-filter/position-filter.component.html
+++ b/src/app/features/positions/components/position-filter/position-filter.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-2" [formGroup]="searchForm">
+<div [formGroup]="searchForm">
   <app-project-category-dropdown formControlName="projectCategory" />
 
   <span class="p-input-icon-left">
